Version 2.9.8dev:

* Added Build-Conflicts: libroar-dev to fix building on OBS.
* Added sharp-bilinear-simple.shader [rsn8887].
* New options window_hidden, window_minimized [cnvogelg].
* Removed GLee from source.
* Fixed JIT direct access on modern Linux distributions.
* Changed default sync method on Windows to swap-finish.
* Updated bezel.
* New option: frame_time (can be used to limit emulation time before vsync).
* Compatibility updates for a couple of shaders [guest.r].
* Imported updated translations from crowdin.com.

Version 2.9.7dev:

* Support building with latest version of MSYS2.
* Renamed option frame to bezel.
* New option: force_aspect.
* Added shaders compiled/ported/written by guest.r.

Version 2.9.6dev:

* Changed default fade in/out duration, only fade in fullscreen.
* FS-UAE default is now to show a 692x540 image, not stretched to fill screen.
* Use scale = legacy to revert to old default behavior (Can put in Host.fs-uae
  or use FS-UAE Launcher set set globally).
* New option scale (choose between full, integer, legacy and no scaling).
* New option stretch (replaces keep_aspect, though it still works).
* F11 is now a dedicated toggle auto zoom function, Alt/Cmd+Z cycles through
  zoom modes as before.
* Render a frame around the view when not stretched (frame = 0 to disable).
* Cartridge freeze shortcut is now Alt/Cmd+C.
* Alt/Cmd+A now toggles stretch mode (aspect correction).
* Imported updated translations from crowdin.com.

Version 2.9.5dev:

* Added some game controller configs.
* Restructuring to allow for (future) multiple video/audio/input drivers.

Version 2.9.3dev:

* Updated FS-UAE icon.
* Allow specifying sub_title = 0 to disable the sub title.

Version 2.9.2dev:

* New boolean option warp_mode (warp_mode = 1 to start in warp mode).
* Try ralphschmidt-cyberstorm-ppc-4471.rom if cyberstormppc.rom is not found.
* Imported updated translations from crowdin.com.

Version 2.9.1dev:
