@@ -1,0 +1,15 @@
+Summary: WHDLoad quit key
+Default:
+Example: 45
+
+Use this option to register what key WHDLoad expects to quit the slave.
+When this option is set, trying to quit FS-UAE via menu, keyboard
+shortcuts, or desktop environment, FS-UAE will inject this keycode
+into the Amiga emulation and wait for the slave to quit.
+
+This only works if the Amiga runs something like this after the slave
+quits:
+
+    uae-configuration SPC_QUIT 1
+
+You can force FS-UAE to quit by pressing quit twice, rapidly.
