@@ -1,5 +1,6 @@
 Version 2.9.8dev:
 
+* New option whdload_quit_key to gracefully quit slaves.
 * Added Build-Conflicts: libroar-dev to fix building on OBS.
 * Added sharp-bilinear-simple.shader [rsn8887].
 * New options window_hidden, window_minimized [cnvogelg].
